@@ -198,6 +198,7 @@ struct pars mpars[MPARS_MAX + 1] = {
   { "0",		0,    "rs485delaftsnd" },
 
   { "0",		0,    "line_timestamp" },
+  { "0",		0,    "msg_ch_delay" },
 
   /* That's all folks */
   { "",                 0,         NULL },
