@@ -10,6 +10,7 @@ New for version x.y:
  - Update to gettext-0.21.
  - Change return values of --help and --version to success.
  - Support higher baud rates on MacOS
+ - Save character send delay to config file
  - Update translations: Romanian, German, French, Norwegian/Bookmal, Polish,
                         Serbian
 
